--- a/Curs01/Ex03/index.html
+++ b/Curs01/Ex03/index.html
@@ -16,6 +16,36 @@
 </head>
 
 <body>
+  <a
+    href="https://www.google.com/"
+    title="Click aici pentru a naviga spre Google"
+  >Google</a>
+  <a
+    href="https://login.yahoo.com/"
+    title="Apasa pentru Yahoo!"
+    target="_blank"
+  >Yahoo</a>
+  <a
+    href="www.bing.com"
+    title="Navigheaza spre Bing"
+  >Bing</a>
+
+  <a
+    href="https://www.facebook.com/"
+    title="Click aici pentru Facebook"
+    target="_blank"
+  >Faceook</a>
+
+  <a
+    href="https://twitter.com/"
+    title="Click pentru Twitter"
+  >Twitter</a>
+
+  <a
+    href="https://pixellab.ro/"
+    title="Aici invatam HTML"
+    target="_blank"
+  >Pixellab</a>
 
   <div
     class="pixeltab-host"
