--- a/Curs01/Ex05/index.html
+++ b/Curs01/Ex05/index.html
@@ -16,7 +16,30 @@
 </head>
 
 <body>
+  <h1>Titlul meu</h1>
+  <h2>Subtitlul meu</h2>
+  <p>Lorem ipsum</p>
+  <p>Lorem ipsum</p>
+  <p>Lorem ipsum</p>
+  <p>Linkurile de mai jos vor deschide siteurile respective in taburi noi si vor avea ca titlul textul linkului.</p>
 
+  <p><a
+      href="www.google.com"
+      title="Google"
+    >Google</a>
+    <a
+      href="www.twitter.com"
+      title="Twitter"
+    >Twitter</a>
+    <a
+      href="www.facebook.com"
+      title="Facebook"
+    >Facebook</a>
+    <a
+      href="www.bing.com"
+      title="Bing"
+    >Bing</a>
+  </p>
 
   <div
     class="pixeltab-host"
