--- a/Curs01/Ex06/index.html
+++ b/Curs01/Ex06/index.html
@@ -16,6 +16,34 @@
 </head>
 
 <body>
+  <h1>Titlul meu</h1>
+  <h2>Google</h2>
+  <p>Google</p>
+  <p><a
+      href="www.google.com"
+      title="Google"
+    >Google</a></p>
+
+  <h2>Twitter</h2>
+  <p>Twitter</p>
+  <p><a
+      href="www.twitter.com"
+      title="Twitter"
+    >Twitter</a></p>
+
+  <h2>Facebook</h2>
+  <p>Facebook</p>
+  <p><a
+      href="www.facebook.com"
+      title="Facebook"
+    >Facebook</a></p>
+
+  <h2>Bing</h2>
+  <p>Bing</p>
+  <p><a
+      href="www.bing.com"
+      title="Bing"
+    >Bing</a></p>
 
 
   <div
