--- a/Curs01/Ex07/index.html
+++ b/Curs01/Ex07/index.html
@@ -16,7 +16,62 @@
 </head>
 
 <body>
+  <h1>The Internet</h1>
+  <h2>Google</h2>
+  <h3>Details</h3>
+  <p>Google</p>
+  <h3>Links</h3>
+  <p><a
+      href="https://en.wikipedia.org/wiki/Google"
+      title="Google"
+    >https://en.wikipedia.org/wiki/Google</a>
+    <a
+      href="https://www.google.com"
+      title="Google"
+    >https://www.google.com</a>
+  </p>
 
+  <h2>Twitter</h2>
+  <h3>Details</h3>
+  <p></p>
+  <h3>Links</h3>
+  <p><a
+      href="https://en.wikipedia.org/wiki/Twitter"
+      title="Twitter"
+    >https://en.wikipedia.org/wiki/Twitter</a>
+    <a
+      href="https://twitter.com"
+      title="Twitter"
+    >https://twitter.com</a>
+  </p>
+
+  <h2>Facebook</h2>
+  <h3>Details</h3>
+  <p></p>
+  <h3>Links</h3>
+  <p><a
+      href="https://en.wikipedia.org/wiki/Facebook"
+      title="Facebook"
+    >https://en.wikipedia.org/wiki/Facebook</a>
+    <a
+      href="https://www.facebook.com"
+      title="Facebook"
+    >https://www.facebook.com</a>
+  </p>
+
+  <h2>Bing</h2>
+  <h3>Details</h3>
+  <p></p>
+  <h3>Links</h3>
+  <p><a
+      href="https://en.wikipedia.org/wiki/Bing_(search_engine)"
+      title="Bing"
+    >https://en.wikipedia.org/wiki/Bing_(search_engine)</a>
+    <a
+      href="https://www.bing.com"
+      title="Bing"
+    >https://www.bing.com</a>
+  </p>
 
   <div
     class="pixeltab-host"
