--- a/Curs01/Ex05/index.html
+++ b/Curs01/Ex05/index.html
@@ -16,29 +16,48 @@
 </head>
 
 <body>
+
+
   <h1>Titlul meu</h1>
   <h2>Subtitlul meu</h2>
-  <p>Lorem ipsum</p>
-  <p>Lorem ipsum</p>
-  <p>Lorem ipsum</p>
-  <p>Linkurile de mai jos vor deschide siteurile respective in taburi noi si vor avea ca titlul textul linkului.</p>
+
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
+
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
+
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+    sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+  </p>
+
+  <p>Linkurile de mai jos vor deschide siteurile respective in taburi noi si vor avea ca titlul textul linkului.
+  </p>
 
   <p><a
       href="www.google.com"
       title="Google"
-    >Google</a>
+    >Google</a>,
     <a
       href="www.twitter.com"
       title="Twitter"
-    >Twitter</a>
+    >Twitter</a>,
     <a
       href="www.facebook.com"
       title="Facebook"
-    >Facebook</a>
+    >Facebook</a>,
     <a
       href="www.bing.com"
       title="Bing"
-    >Bing</a>
+    >Bing</a>,
   </p>
 
   <div
