--- a/Curs02/Ex01/index.html
+++ b/Curs02/Ex01/index.html
@@ -17,6 +17,26 @@
 
 <body>
 
+  <img
+    src="https://placekitten.com/200/287"
+    alt="Pisica"
+  >
+  <img
+    src="https://placekitten.com/200/286"
+    alt="Pisica"
+  >
+  <img
+    src="https://placekitten.com/200/139"
+    alt="Pisica"
+  >
+  <img
+    src="https://placekitten.com/200/138"
+    alt="Pisica"
+  >
+  <img
+    src="https://placekitten.com/408/287"
+    alt="Pisica"
+  >
 
   <div
     class="pixeltab-host"
