--- a/Curs02/Ex05/index.html
+++ b/Curs02/Ex05/index.html
@@ -7,7 +7,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   >
-  <title>Document</title>
+  <title>Liste Ordonate</title>
 
   <link
     rel="stylesheet"
@@ -17,6 +17,23 @@
 
 <body>
 
+  <ol>
+    <li>JavaScript</li>
+    <li>node.js</li>
+    <li>Firebase</li>
+  </ol>
+
+  <ol>
+    <li>npm</li>
+    <li>Mongodb</li>
+    <li>Git</li>
+  </ol>
+
+  <ol>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>DOM</li>
+  </ol>
 
   <div
     class="pixeltab-host"
