--- a/Curs02/Ex02/index.html
+++ b/Curs02/Ex02/index.html
@@ -11,11 +11,27 @@
 </head>
 
 <body>
-  <img src="">
-  <img src="">
-  <img src="">
-  <img src="">
-  <img src="">
+
+  <img
+    src="https://placekitten.com/"
+    alt="Pisica 1"
+  >
+  <img
+    src="https://placekitten.com/"
+    alt="Pisica 2"
+  >
+  <img
+    src="https://placekitten.com/"
+    alt="Pisica 3"
+  >
+  <img
+    src="https://placekitten.com/"
+    alt="Pisica 4"
+  >
+  <img
+    src="https://placekitten.com/"
+    alt="Pisica 5"
+  >
 
   <div
     class="pixeltab-host"
