--- a/Curs02/Ex04/index.html
+++ b/Curs02/Ex04/index.html
@@ -7,7 +7,7 @@
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   >
-  <title>Document</title>
+  <title>Liste neordonate</title>
 
   <link
     rel="stylesheet"
@@ -16,6 +16,44 @@
 </head>
 
 <body>
+
+  <ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>Bootstrap</li>
+    <li>npm</li>
+    <li>Sass</li>
+    <li>VSCode</li>
+  </ul>
+
+  <ul>
+    <li>JavaScript</li>
+    <li>node.js</li>
+    <li>Ajax</li>
+    <li>jQuery</li>
+    <li>Axios</li>
+  </ul>
+
+  <ul>
+    <li>Proteine</li>
+    <li>Fructe</li>
+    <li>Legume</li>
+  </ul>
+
+  <ul>
+    <li>Andrei</li>
+    <li>Bogdan</li>
+    <li>Dan</li>
+    <li>Ionut</li>
+  </ul>
+
+  <ul>
+    <li>Alina</li>
+    <li>Angelica</li>
+    <li>Ioana</li>
+    <li>Andreea</li>
+  </ul>
+
   <div
     class="pixeltab-host"
     id="html01-02-04"
