--- a/Curs02/Ex10/index.html
+++ b/Curs02/Ex10/index.html
@@ -22,14 +22,17 @@
   <h2>HTML</h2>
   <p>
     <img
-      src="/Curs02/Ex10/images/html.jpg"
-      alt="html"
+      src="./images/html.jpg"
+      alt="HTML"
     >
   </p>
-  <p>Pana in momentul de fata am studiat documente HTML, am studiat structura acestora, si am si trecut prin cateva
-    elemente de HTML, dar studiul abia a inceput.</p>
-  <p>Pana acum am studiat elemente cum ar fi:</p>
-
+  <p>
+    Pana in momentul de fata am studiat documente HTML, am studiat structura acestora, si am si trecut prin cateva
+    elemente de HTML, dar studiul abia a inceput.
+  </p>
+  <p>
+    Pana acum am studiat elemente cum ar fi:
+  </p>
   <ul>
     <li>html, body, head</li>
     <li>a</li>
@@ -40,9 +43,9 @@
     <li>span</li>
     <li>hr</li>
   </ul>
-
-  <p>Urmeaza sa studiem si alte elemente mai avansate cum ar fi:</p>
-
+  <p>
+    Urmeaza sa studiem si alte elemente mai avansate cum ar fi:
+  </p>
   <ol>
     <li>div, section, aside, nav</li>
     <li>header, footer</li>
@@ -54,13 +57,16 @@
 
   <h2>CSS</h2>
   <p><img
-      src="/Curs02/Ex10/images/css.jpg"
+      src="./images/css.jpg"
       alt="CSS"
     ></p>
-  <p>La un moment dat vom intra si in CSS, unde vom invata sa coloram fundaluri, texte, sa lucram cu dimensiunile
-    textelor.</p>
-  <p>Iata cateva din proprietatile pe care le vom folosi: </p>
-
+  <p>
+    La un moment dat vom intra si in CSS, unde vom invata sa coloram fundaluri, texte, sa lucram cu dimensiunile
+    textelor.
+  </p>
+  <p>
+    Iata cateva din proprietatile pe care le vom folosi:
+  </p>
   <ul>
     <li>color</li>
     <li>background-color</li>
@@ -68,8 +74,9 @@
     <li>text-decoration</li>
     <li>Font-weight</li>
   </ul>
-
-  <p>Apoi vom trece la concepte putin mai avansate cum ar fi:</p>
+  <p>
+    Apoi vom trece la concepte putin mai avansate cum ar fi:
+  </p>
   <ol>
     <li>box model</li>
     <li>stacking context</li>
@@ -81,13 +88,16 @@
 
   <h2>JavaScript</h2>
   <p><img
-      src="/Curs02/Ex10/images/js.jpg"
+      src="./images/js.jpg"
       alt="JavaScript"
     ></p>
-  <p>In viitor ne putem uita si la JavaScript unde vom invata detaliile programarii in general cu notiuni de programare
-    si stiinta calculatoarelor.</p>
-  <p>Spre exemplu:</p>
-
+  <p>
+    In viitor ne putem uita si la JavaScript unde vom invata detaliile programarii in general cu notiuni de programare
+    si stiinta calculatoarelor.
+  </p>
+  <p>
+    Spre exemplu:
+  </p>
   <ul>
     <li>variabile</li>
     <li>bucle</li>
@@ -95,10 +105,10 @@
     <li>functii</li>
     <li>obiecte</li>
   </ul>
-
-  <p>JavaScriptul este in esenta un limbaj de scripting pentru browsere in principal, prin urmare cu el se manipuleaza
-    site-urile web si se creeaza aplicatiile web, folosind tehnici precum:</p>
-
+  <p>
+    JavaScriptul este in esenta un limbaj de scripting pentru browsere in principal, prin urmare cu el se manipuleaza
+    site-urile web si se creeaza aplicatiile web, folosind tehnici precum:
+  </p>
   <ol>
     <li>Ajax</li>
     <li>DOM Scripting</li>
@@ -110,26 +120,30 @@
 
   <h2>Node JS</h2>
   <p><img
-      src="/Curs02/Ex10/images/node.jpg"
+      src="./images/node.jpg"
       alt="NodeJS"
     ></p>
-  <p>Ultima provocare pentru un dezvoltator incepator este node js. Node js este JavaScript pe server.</p>
-  <p>Avantajele folosirii node sunt:</p>
-
+  <p>
+    Ultima provocare pentru un dezvoltator incepator este node js. Node js este JavaScript pe server.
+  </p>
+  <p>
+    Avantajele folosirii node sunt:
+  </p>
   <ul>
     <li>Acelasi limbaj de programare si pe client si pe server, cod re-utilizabil la maxim.</li>
     <li>Viteza buna</li>
     <li>Sistemul asincron puternic din JavaScript</li>
     <li>Comunicare simpla cu clientii prin websockets, Aja</li>
   </ul>
-
-  <p>Dezvantajele folosirii node sunt:</p>
-
+  <p>
+    Dezvantajele folosirii node sunt:
+  </p>
   <ol>
     <li>Usor de invatat, greu de stapanit</li>
     <li>Sistemul asincron este greu de stapanit</li>
     <li>Creearea unui server pe socket poate fi dificila</li>
   </ol>
+
   <div
     class="pixeltab-host"
     id="html01-02-10"
