--- a/Curs02/Ex08/index.html
+++ b/Curs02/Ex08/index.html
@@ -23,20 +23,20 @@
     Peste varfuri trece luna,<br>
     Codru-si bate frunza lin,<br>
     Peste ramuri de arin<br>
-    Melancolic cornul suna.<br>
+    Melancolic cornul suna.
   </p>
 
   <p>
     Mai departe, mai departe,<br>
     Mai incet, tot mai incet,<br>
     Sufletu-mi nemangaiet<br>
-    Indulcind cu dor de moarte.<br>
+    Indulcind cu dor de moarte.
   </p>
 
   <p>
     De ce taci, cand femecata<br>
-    Inima-mi spre tine intorn?
-    Mai suna-vei, dulce corn,
+    Inima-mi spre tine intorn?<br>
+    Mai suna-vei, dulce corn,<br>
     Pentru mine vreodata?
   </p>
 
