--- a/Curs02/Ex11/index.html
+++ b/Curs02/Ex11/index.html
@@ -19,36 +19,50 @@
   <h1>Class images</h1>
 
   <h2>Berlin</h2>
-  <p><img
-      src="/Curs02/Ex11/images/berlin.jpg"
+  <p>
+    <img
+      src="./images/berlin.jpg"
       alt="Berlin"
-    ></p>
-  <p>Berlin, Germany’s capital, dates to the 13th century. Reminders of the city's turbulent 20th-century history
+    >
+  </p>
+  <p>
+    Berlin, Germany&#8217s capital, dates to the 13th century. Reminders of the city's turbulent 20th-century history
     include its Holocaust memorial and the Berlin Wall's graffitied remains. Divided during the Cold War, its
     18th-century Brandenburg Gate has become a symbol of reunification. The city's also known for its art scene and
-    modern landmarks like the gold-colored, swoop-roofed Berliner Philharmonie, built in 1963.</p>
-  <p>Link to Wikipedia (target blank): <a
+    modern landmarks like the gold-colored, swoop-roofed Berliner Philharmonie, built in 1963.
+  </p>
+  <p>
+    Link to Wikipedia (target blank):
+    <a
       href="https://en.wikipedia.org/wiki/Berlin"
       target="_blank"
       rel="noopener noreferrer"
       title="berlin"
-    >https://en.wikipedia.org/wiki/Berlin</a></p>
+    >https://en.wikipedia.org/wiki/Berlin</a>
+  </p>
   <hr>
 
   <h2>Cat</h2>
-  <p><img
-      src="/Curs02/Ex11/images/cat.jpg"
+  <p>
+    <img
+      src="./images/cat.jpg"
       alt="Cat"
-    ></p>
-  <p>The cat is a small carnivorous mammal. It is the only domesticated species in the family Felidae and often referred
+    >
+  </p>
+  <p>
+    The cat is a small carnivorous mammal. It is the only domesticated species in the family Felidae and often referred
     to as the domestic cat to distinguish it from wild members of the family. The cat is either a house cat or a farm
-    cat, which are pets, or a feral cat, which ranges freely and avoids human contact</p>
-  <p>Link to Wikipedia (target blank):<a
+    cat, which are pets, or a feral cat, which ranges freely and avoids human contact
+  </p>
+  <p>
+    Link to Wikipedia (target blank):
+    <a
       href="https://en.wikipedia.org/wiki/Cat"
       target="_blank"
       rel="noopener noreferrer"
       title="Cat"
-    >https://en.wikipedia.org/wiki/Cat</a></p>
+    >https://en.wikipedia.org/wiki/Cat</a>
+  </p>
 
   <div
     class="pixeltab-host"
