--- a/Curs03/Ex04/index.html
+++ b/Curs03/Ex04/index.html
@@ -48,6 +48,66 @@
     </ul>
   </form>
 
+  <form>
+    <h3>Mega</h3>
+    <ul>
+      <li>
+        <label for="paine">Paine</label>
+        <input
+          type="checkbox"
+          name="paine"
+          id="paine"
+        >
+      </li>
+      <li>
+        <label for="boabe">Boabe pisica</label>
+        <input
+          type="checkbox"
+          name="boabe"
+          id="boabe"
+        >
+      </li>
+      <li>
+        <label for="apa">Apa</label>
+        <input
+          type="checkbox"
+          name="apa"
+          id="apa"
+        >
+      </li>
+    </ul>
+  </form>
+
+  <form>
+    <h3>Cora</h3>
+    <ul>
+      <li>
+        <label for="legume">Legume</label>
+        <input
+          type="checkbox"
+          name="legume"
+          id="legume"
+        >
+      </li>
+      <li>
+        <label for="pui">Pui</label>
+        <input
+          type="checkbox"
+          name="pui"
+          id="pui"
+        >
+      </li>
+      <li>
+        <label for="fructe">Fructe</label>
+        <input
+          type="checkbox"
+          name="fructe"
+          id="fructe"
+        >
+      </li>
+    </ul>
+  </form>
+
   <div
     class="pixeltab-host"
     id="html01-03-04"
