--- a/Curs03/Ex06/index.html
+++ b/Curs03/Ex06/index.html
@@ -49,6 +49,84 @@
         <label for="lebada">Lebada</label>
       </li>
     </ul>
+    <button
+      type="submit"
+      title="Trimite"
+    >Trimite</button>
+  </form>
+
+  <form>
+    <h3>Pesti</h3>
+    <ul>
+      <li>
+        <input
+          type="radio"
+          name="pesti"
+          id="crap"
+          value="Crap"
+        >
+        <label for="crap">Crap</label>
+      </li>
+      <li>
+        <input
+          type="radio"
+          name="pesti"
+          id="somon"
+          value="Somon"
+        >
+        <label for="somon">Somon</label>
+      </li>
+      <li>
+        <input
+          type="radio"
+          name="pesti"
+          id="ton"
+          value="Ton"
+        >
+        <label for="ton">Ton</label>
+      </li>
+    </ul>
+    <button
+      type="submit"
+      title="Trimite"
+    >Trimite</button>
+  </form>
+
+  <form>
+    <h3>Mamifere</h3>
+    <ul>
+      <li>
+        <input
+          type="radio"
+          name="mamifere"
+          id="cangur"
+          value="Cangur"
+        >
+        <label for="cangur">Cangur</label>
+      </li>
+      <li>
+        <input
+          type="radio"
+          name="mamifere"
+          id="elefant"
+          value="Elefant"
+        >
+        <label for="elefant">Elefant</label>
+      </li>
+      <li>
+        <input
+          type="radio"
+          name="mamifere"
+          id="soarece"
+          value="Soarece"
+        >
+        <label for="soarece">Soarece</label>
+      </li>
+    </ul>
+    <button
+      type="submit"
+      title="Trimite"
+    >Trimite</button>
   </form>
 
   <div
