--- a/Curs03/Ex07/index.html
+++ b/Curs03/Ex07/index.html
@@ -28,7 +28,32 @@
       <option value="boston">Boston</option>
     </select>
     <hr>
+  </form>
 
+  <form>
+    <h3>Canada</h3>
+    <select>
+      <option value="">--selecteaza--</option>
+      <option value="quebec">Quebec</option>
+      <option value="ontario">Ontario</option>
+      <option value="albertaa">Alberta</option>
+      <option value="yokon">Yokon</option>
+      <option value="manitoba">Manitoba</option>
+    </select>
+    <hr>
+  </form>
+
+  <form>
+    <h3>Romania</h3>
+    <select>
+      <option value="">--selecteaza--</option>
+      <option value="campiaRomana">Campia Romana</option>
+      <option value="carpatiiOccidentali">Carpatii Occidentali</option>
+      <option value="podisulGetic">Podisul Getic</option>
+      <option value="subcarpati">Subcarpati</option>
+      <option value="podisuldobrogei">Podisul Dobrogei</option>
+    </select>
+    <hr>
   </form>
 
 
