--- a/Curs03/Ex08/index.html
+++ b/Curs03/Ex08/index.html
@@ -24,6 +24,19 @@
       name="name"
       value="Dragos"
     >
+    <input
+      type="text"
+      id="surname"
+      name="surname"
+    >
+    <button
+      type="submit"
+      name="submit"
+    >Submit</button>
+    <button
+      type="reset"
+      name="reset"
+    >Reset</button>
   </form>
 
   <div
