--- a/Curs03/Ex05/index.html
+++ b/Curs03/Ex05/index.html
@@ -18,6 +18,23 @@
 
 <body>
   <form>
+    <input
+      type="email"
+      name="email"
+      placeholder="Email"
+      required
+    >
+    <input
+      type="password"
+      name="password"
+      required
+    >
+    <label for="remember">Remember</label>
+    <input
+      type="checkbox"
+      name="remember"
+      id="remember"
+    >
     <button type="submit">Trimite</button>
   </form>
 
