--- a/Curs03/Ex10/index.html
+++ b/Curs03/Ex10/index.html
@@ -16,6 +16,49 @@
 </head>
 
 <body>
+
+  <h1>Tari si diviziunile lor</h1>
+  <form>
+    <fieldset>
+      <legend>Statele Unite</legend>
+      <select>
+        <option value="">--selecteaza--</option>
+        <option value="alabama">Alabama</option>
+        <option value="arkansas">Arkansas</option>
+        <option value="northDakota">North Dakota</option>
+        <option value="newYork">New York</option>
+        <option value="boston">Boston</option>
+      </select>
+    </fieldset>
+  </form>
+
+  <form>
+    <fieldset>
+      <legend>Canada</legend>
+      <select>
+        <option value="">--selecteaza--</option>
+        <option value="quebec">Quebec</option>
+        <option value="ontario">Ontario</option>
+        <option value="albertaa">Alberta</option>
+        <option value="yokon">Yokon</option>
+        <option value="manitoba">Manitoba</option>
+      </select>
+    </fieldset>
+  </form>
+
+  <form>
+    <fieldset>
+      <legend>Romania</legend>
+      <select>
+        <option value="">--selecteaza--</option>
+        <option value="campiaRomana">Campia Romana</option>
+        <option value="carpatiiOccidentali">Carpatii Occidentali</option>
+        <option value="podisulGetic">Podisul Getic</option>
+        <option value="subcarpati">Subcarpati</option>
+        <option value="podisuldobrogei">Podisul Dobrogei</option>
+      </select>
+    </fieldset>
+  </form>
   <div
     class="pixeltab-host"
     id="html01-03-10"
