--- a/Curs04/Ex02/index.html
+++ b/Curs04/Ex02/index.html
@@ -22,7 +22,23 @@
 </head>
 
 <body>
-
+  <table>
+    <tr>
+      <th>Nume</th>
+      <th>Exemple</th>
+      <th>Detalii</th>
+    </tr>
+    <tr>
+      <th>Valoare</th>
+      <th>Idei</th>
+      <th>Explicatii</th>
+    </tr>
+    <tr>
+      <th>Prima</th>
+      <th>Prima Idee</th>
+      <th>Cateva Explicatii</th>
+    </tr>
+  </table>
 
   <div
     class="pixeltab-host"
