--- a/Curs07/Ex01/index.html
+++ b/Curs07/Ex01/index.html
@@ -18,6 +18,12 @@
     rel="stylesheet"
     href="https://pixellab.ro/js/pixeltab/static/js/pixeltab.css"
   >
+
+  <style>
+    a {
+      color: green;
+    }
+  </style>
 </head>
 
 <body>
@@ -50,7 +56,10 @@
   <h3>Links</h3>
   <p>
     <a href="http://en.wikipedia.org/wiki/Twitter">https://en.wikipedia.org/wiki/Twitter</a> <br>
-    <a href="http://twitter.com">https://twitter.com</a>
+    <a
+      style="color:yellow"
+      href="http://twitter.com"
+    >https://twitter.com</a>
   </p>
 
   <h2>Facebook</h2>
