--- a/Curs08/Ex03/index.html
+++ b/Curs08/Ex03/index.html
@@ -20,6 +20,29 @@
 
 
 <body>
+  <div class="my-div">
+    <p>Cutia rosie</p>
+  </div>
+
+  <div class="blue">
+    <p>Cutia albastra</p>
+  </div>
+
+  <div class="container">
+    <p>Container</p>
+  </div>
+
+  <div class="green">
+    <p>Cutia verde</p>
+  </div>
+
+  <div class="purple">
+    <p>Cutia mov</p>
+  </div>
+
+  <div class="turquoise"></div>
+
+  <div class="transparent"></div>
 
   <div
     class="pixeltab-host"
