--- a/Curs08/Ex04/index.html
+++ b/Curs08/Ex04/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <nav>
+  <nav class="nav-top">
     <a
       href="#water"
       title="Apa"
@@ -38,9 +38,9 @@
     id="water"
   >
     <p>
-      Apa este formata din doi atomi de hidrogen
+      <span class="legend">Apa</span> este formata din doi atomi de hidrogen
       si o molecula de oxigen.<br>
-      Formula sa chimica este H2O.
+      Formula sa chimica este <span class="sub">H2O.</span>
     </p>
   </div>
 
@@ -114,10 +114,10 @@
     id="acid"
   >
     <p>
-      Acidul sulfuric cunoscut ca si vitriol, este format din
+      <span class="legend">Acid Sulfuric</span> cunoscut ca si vitriol, este format din
       2 atomi de hidrogen, 4 atomi de oxigen si o
       molecula de sulf<br>
-      Formula sa chimica este H2SO4.
+      Formula sa chimica este <span class="sub">H2SO4</span>.
     </p>
   </div>
 
@@ -191,10 +191,25 @@
     id="ozone"
   >
     <p>
-      Ozonul este o molecula formata din 3 atomi de oxigen.<br>
-      Formula sa chimica este: O3.
+      <span class="legend">Ozonul</span> este o molecula formata din <span class="sub">3 atomi de oxigen</span>.<br>
+      Formula sa chimica este: <span class="sub">O3</span>.
     </p>
   </div>
+
+  <nav class="nav-bottom">
+    <a
+      href="#water"
+      title="Apa"
+    >Apa</a>
+    <a
+      href="#acid"
+      title="Acid"
+    >Acid Sulfuric</a>
+    <a
+      href="#ozone"
+      title="Ozon"
+    >Ozon</a>
+  </nav>
 
   <div
     class="pixeltab-host"
