--- a/Curs08/Ex05/index.html
+++ b/Curs08/Ex05/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <nav>
+  <nav class="nav-top">
     <a
       href="#pythagora"
       title="Teoria lui Pitagora"
@@ -38,9 +38,11 @@
     id="pythagora"
   >
     <p>
-      Teoria lui Pitagora este fundamentala in geometria euclidiana.<br>
-      Aceasta sustine ca suma patratelor laturilor unui triunghi este egala cu patratul ipotenuzei.<br>
-      Formula sa este: a2+b2=c2.
+      <span class="legend">Teoria lui Pitagora</span> este fundamentala in <span class="sup">geometria
+        euclidiana</span>.<br>
+      Aceasta sustine ca suma patratelor laturilor unui triunghi este egala cu <span class="sup">patratul
+        ipotenuzei</span>.<br>
+      Formula sa este: <span class="sup">a2+b2=c2</span>.
     </p>
   </div>
 
@@ -114,8 +116,9 @@
     id="circle"
   >
     <p>
-      Suprafata cercului se calculeaza stiind raza acestuia si valoarea lui π.<br>
-      Formula sa este πr2.
+      <span class="legend">Suprafata cercului</span> se calculeaza stiind <span class="sup">raza</span> acestuia si
+      valoarea lui <span class="sup">π</span>.<br>
+      Formula sa este <span class="sup">πr2</span>.
     </p>
   </div>
 
@@ -189,10 +192,25 @@
     id="squares"
   >
     <p>
-      Suma a doua patrate se calculeaza folosind urmatoarea formula:<br>
-      A2+B2=(A+B)2 - 2AB
+      <span class="legend">Suma a doua patrate</span> se calculeaza folosind urmatoarea formula:<br>
+      <span class="sup">A2+B2=(A+B)2 - 2AB</span>
     </p>
   </div>
+
+  <nav class="nav-bottom">
+    <a
+      href="#pythagora"
+      title="Teoria lui Pitagora"
+    >Teoria lui Pitagora</a>
+    <a
+      href="#circle"
+      title="Suprafata Cercului"
+    >Suprafata Cercului</a>
+    <a
+      href="#squares"
+      title="Suma patratelor"
+    >Suma patratelor</a>
+  </nav>
 
   <div
     class="pixeltab-host"
