--- a/monochrome/index.html
+++ b/monochrome/index.html
@@ -216,11 +216,12 @@
                 Monochrome
               </a>
             </h1>
-
+          </header>
+          <section>
             <span class="product-tile-price">
               $425
             </span>
-          </header>
+          </section>
         </article>
         <!-- ./product-tile -->
 
@@ -258,10 +259,12 @@
               </a>
             </h1>
 
+          </header>
+          <section>
             <span class="product-tile-price">
               $425
             </span>
-          </header>
+          </section>
         </article>
         <!-- ./product-tile -->
 
@@ -298,10 +301,13 @@
                 Monochrome
               </a>
             </h1>
+          </header>
 
+          <section>
             <span class="product-tile-price">
               $425
             </span>
+          </section>
           </header>
         </article>
         <!-- ./product-tile -->
@@ -339,11 +345,13 @@
                 Monochrome
               </a>
             </h1>
+          </header>
 
+          <section>
             <span class="product-tile-price">
               $425
             </span>
-          </header>
+          </section>
         </article>
         <!-- ./product-tile -->
       </section>
@@ -391,11 +399,13 @@
                 Monochrome
               </a>
             </h1>
+          </header>
 
+          <section>
             <span class="product-tile-price">
               $425
             </span>
-          </header>
+          </section>
         </article>
         <!-- ./product-tile -->
 
@@ -432,11 +442,13 @@
                 Monochrome
               </a>
             </h1>
+          </header>
 
+          <section>
             <span class="product-tile-price">
               $425
             </span>
-          </header>
+          </section>
         </article>
         <!-- ./product-tile -->
 
@@ -473,11 +485,13 @@
                 Monochrome
               </a>
             </h1>
+          </header>
 
+          <section>
             <span class="product-tile-price">
               $425
             </span>
-          </header>
+          </section>
         </article>
         <!-- ./product-tile -->
 
@@ -514,11 +528,13 @@
                 Monochrome
               </a>
             </h1>
+          </header>
 
+          <section>
             <span class="product-tile-price">
               $425
             </span>
-          </header>
+          </section>
         </article>
         <!-- ./product-tile -->
       </section>
@@ -595,11 +611,13 @@
                 Monochrome
               </a>
             </h1>
+          </header>
 
+          <section>
             <span class="product-tile-price">
               $425
             </span>
-          </header>
+          </section>
         </article>
         <!-- ./product-tile -->
 
@@ -636,11 +654,13 @@
                 Monochrome
               </a>
             </h1>
+          </header>
 
+          <section>
             <span class="product-tile-price">
               $425
             </span>
-          </header>
+          </section>
         </article>
         <!-- ./product-tile -->
 
@@ -677,11 +697,13 @@
                 Monochrome
               </a>
             </h1>
+          </header>
 
+          <section>
             <span class="product-tile-price">
               $425
             </span>
-          </header>
+          </section>
         </article>
         <!-- ./product-tile -->
 
@@ -718,11 +740,13 @@
                 Monochrome
               </a>
             </h1>
+          </header>
 
+          <section>
             <span class="product-tile-price">
               $425
             </span>
-          </header>
+          </section>
         </article>
         <!-- ./product-tile -->
       </section>
@@ -778,11 +802,13 @@
                 Monochrome
               </a>
             </h1>
+          </header>
 
+          <section>
             <span class="product-tile-price">
               $425
             </span>
-          </header>
+          </section>
         </article>
         <!-- ./product-tile -->
 
@@ -819,11 +845,13 @@
                 Monochrome
               </a>
             </h1>
+          </header>
 
+          <section>
             <span class="product-tile-price">
               $425
             </span>
-          </header>
+          </section>
         </article>
         <!-- ./product-tile -->
 
@@ -860,11 +888,13 @@
                 Monochrome
               </a>
             </h1>
+          </header>
 
+          <section>
             <span class="product-tile-price">
               $425
             </span>
-          </header>
+          </section>
         </article>
         <!-- ./product-tile -->
 
@@ -901,11 +931,13 @@
                 Monochrome
               </a>
             </h1>
+          </header>
 
+          <section>
             <span class="product-tile-price">
               $425
             </span>
-          </header>
+          </section>
         </article>
         <!-- ./product-tile -->
       </section>
@@ -950,7 +982,7 @@
     </section>
     <!-- ./footer-contact -->
 
-    <section class="footer-nav">
+    <nav class="footer-nav">
       <ul>
         <li>
           <a
@@ -1010,7 +1042,7 @@
           >advertising</a>
         </li>
       </ul>
-    </section>
+    </nav>
     <!-- ./footer-nav -->
 
     <section class="footer-connect">
@@ -1028,8 +1060,8 @@
         >Submit</button>
       </form>
 
-      <ul>
-        <li class="footer-social-media">
+      <ul class="footer-social-media">
+        <li>
           <a
             href=""
             target="_blank"
@@ -1040,7 +1072,7 @@
           </a>
         </li>
 
-        <li class="footer-social-media">
+        <li>
           <a
             href=""
             target="_blank"
@@ -1051,7 +1083,7 @@
           </a>
         </li>
 
-        <li class="footer-social-media">
+        <li>
           <a
             href=""
             target="_blank"
@@ -1062,7 +1094,7 @@
           </a>
         </li>
 
-        <li class="footer-social-media">
+        <li>
           <a
             href=""
             target="_blank"
