--- a/monochrome/index.html
+++ b/monochrome/index.html
@@ -18,10 +18,10 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
   >
-  <!-- <link
+  <link
     rel="stylesheet"
     href="./style/style.css"
-  > -->
+  >
   <title>Monochrome</title>
 </head>
 
