--- a/thread-affair/index.html
+++ b/thread-affair/index.html
@@ -19,6 +19,11 @@
     referrerpolicy="no-referrer"
   >
 
+  <link
+    rel="stylesheet"
+    href="./style/style.css"
+  >
+
   <title>Thread Affair</title>
 </head>
 
