--- a/thread-affair/index.html
+++ b/thread-affair/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="header container">
     <section class="header-top">
       <section class="header-customer-support">
         <ul>
@@ -37,7 +37,7 @@
               href="tel:+1-877-666-1840"
               title="Call us"
             >
-              <i class="fa-solid fa-phone"></i>
+              <i class="icon fa-solid fa-phone"></i>
               Toll Free 1-877-666-1840
             </a>
           </li>
@@ -52,19 +52,6 @@
       </section>
       <!-- ./header-customer-support -->
 
-      <section class="header-logo">
-        <a
-          href="/"
-          title="Thread Affail"
-        >
-          <img
-            src="./images/logo.jpg"
-            alt="Thread Affail - Logo"
-          >
-        </a>
-      </section>
-      <!-- ./header-logo -->
-
       <secton class="header-site-controls">
         <ul>
           <li class="header-user-controls">
@@ -78,7 +65,7 @@
               >
             </a>
 
-            <i class="fa-solid fa-angle-down"></i>
+            <i class="icon fa-solid fa-angle-down"></i>
           </li>
 
           <li class="header-cart-controls">
@@ -93,6 +80,20 @@
         </ul>
       </secton>
       <!-- ./header-site-controls  -->
+
+      <section class="header-logo">
+        <a
+          href="/"
+          title="Thread Affail"
+        >
+          <img
+            src="./images/logo.jpg"
+            alt="Thread Affail - Logo"
+          >
+        </a>
+      </section>
+      <!-- ./header-logo -->
+
     </section>
     <!-- ./header-top -->
 
@@ -170,7 +171,7 @@
   <main class="content">
     <header class="content-header">
       <div class="banner-main">
-        <div class="banner-content">
+        <div class="banner-content container">
           <h1>Custom Suits</h1>
           <h2>Get back to work is style</h2>
 
@@ -758,7 +759,7 @@
   </main>
   <!-- ./content -->
 
-  <footer class="footer">
+  <footer class="footer container">
     <section class="footer-top">
       <nav class="footer-nav">
         <ul>
@@ -984,7 +985,7 @@
           <a
             href="tel:+0039 02 760 003 66"
             title="Call us"
-          >Tel: 0039 02 760 003 66</a>
+          >Tel: 0039 02 760 003 66</a> <br>
           <a
             href="mailto:office@thread-affair.com"
             title="Email us"
