--- a/monochrome/index.html
+++ b/monochrome/index.html
@@ -115,18 +115,18 @@
 
       <section class="header-controls">
         <form>
-          <a
-            title="Search"
-            class="search"
-          >
-            <i class="icon fa-solid fa-magnifying-glass"></i>
-          </a>
           <input
             type="text"
             name=""
             id="search"
             placeholder="Search"
           >
+          <button
+            title="Search"
+            class="search"
+          >
+            <i class="icon fa-solid fa-magnifying-glass"></i>
+          </button>
         </form>
         <a
           href=""
