--- a/thread-affair/index.html
+++ b/thread-affair/index.html
@@ -193,7 +193,7 @@
     </header>
     <!-- ./content-header -->
 
-    <section class="content-main">
+    <section class="content-main container">
       <section class="home-catalog-preview">
         <header>
           <h1>
@@ -597,7 +597,7 @@
           href=""
           title="Click here for gift"
         >
-          <span>Want to buy a gift for someone?</span>
+          <span>Want to buy<br> a gift for someone?</span>
           <span>
             Press
             <span>here</span>
