--- a/monochrome/index.html
+++ b/monochrome/index.html
@@ -205,10 +205,10 @@
   </header>
   <!-- ./header -->
 
-  <main class="content">
+  <main class="content container">
     <section class="home-catalog-preview">
       <header>
-        <h1>New Stuff</h1>
+        <h1 class="normal">New Stuff</h1>
       </header>
 
       <section class="product-tiles">
@@ -390,7 +390,7 @@
 
     <section class="home-catalog-preview">
       <header>
-        <h1>Most loved</h1>
+        <h1 class="normal">Most loved</h1>
       </header>
 
       <section class="product-tiles">
