--- a/monochrome/index.html
+++ b/monochrome/index.html
@@ -208,7 +208,7 @@
   <main class="content container">
     <section class="home-catalog-preview">
       <header>
-        <h1 class="normal">New Stuff</h1>
+        <h1 class="text-capitalize">New Stuff</h1>
       </header>
 
       <section class="product-tiles">
@@ -390,7 +390,7 @@
 
     <section class="home-catalog-preview">
       <header>
-        <h1 class="normal">Most loved</h1>
+        <h1 class="text-capitalize">Most loved</h1>
       </header>
 
       <section class="product-tiles">
